fix: focus input and overflow

--- a/src/components/user/components/Search.module.css
+++ b/src/components/user/components/Search.module.css
@@ -36,6 +36,8 @@
   width: 100%;
   opacity: 60%;
   transition: all 0.3s ease-in-out;
+
+  text-overflow: ellipsis;
 }
 
 .search_container input:focus {
